Dark mode switch and footer bug

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -163,132 +163,10 @@ html[data-theme='dark']{
 a:hover {
   color: transparent;
 }
+
 /* Responsive */
 @media only screen and (max-width: 450px) {
   .text {
     margin-top: 5rem;
   }
-}
-
-/*social icons footer*/
-
-.social-icons-footer {
-  font-size: 20px;
-  align-items: center;
-  justify-content: center;
-  flex-flow: row wrap;
-  width: 220px;
-  display: block;
-}
-
-.social-icon-footer {
-  display: flex;
-  position: relative;
-  overflow: hidden;
-  width: var(--link-size-footer-s);
-  height: var(--link-size-footer-s);
-  margin: 3px;
-  background-color: #26a69a;
-  border-radius: 50%;
-  text-decoration: none;
-  float: left;
-}
-
-.social-icon-footer i {
-  margin: auto;
-  font-size: 15px;
-  color: #fff;
-}
-
-.social-icon-footer:hover i {
-  color: #000000;
-}
-
-/*Responsive*/
-
-@media(min-width: 60rem)
-{
-  .social-icons-footer{
-    width: 280px;
-  }
-
-  .social-icon-footer{
-    width: var(--link-size-footer-b);
-    height: var(--link-size-footer-b);
-  }
-
-  .social-icon-footer i{
-    font-size: 20px;
-  }
-}
-
-/*Animations*/
-
-.social-icon-footer:hover {
-  transform: translateY(-4px);
-  box-shadow: 0px 4px 12px rgb(100, 248, 233);
-}
-
-.social-icon:hover:after {
-  transform: translate(0) scale(1.2);
-}
-
-a:hover {
-  color: transparent;
-}
-
-/*Toggle for light/dark mode*/
-
-input[type=checkbox]{
-	height: 0;
-	width: 0;
-	visibility: hidden;
-}
-
-label {
-	cursor: pointer;
-	text-indent: -9999px;
-	width: 50px;
-	height: 30px;
-	background: grey;
-	display: block;
-	border-radius: 20px;
-  position: relative;
-  margin-top: 1.5em;
-  margin-left: 1.5em;
-}
-
-label:after {
-	content: ' ';
-	position: absolute;
-	top: 5px;
-	left: 5px;
-	width: 20px;
-	height: 20px;
-	background: #fff;
-	border-radius: 50px;
-	transition: 1s;
-}
-
-input:checked + label {
-	background: rgb(63, 25, 170);
-}
-
-input:checked + label:after {
-	left: calc(100% - 5px);
-	transform: translateX(-100%);
-}
-
-label:active:after {
-	width: 130px;
-}
-
-/*Transition for Toggle*/
-
-html.transition,
-html.transition *,
-html.transition *:before,
-html.transition *:after{
-  transition: all 750ms !important;
-  transition-delay: 0 !important;
 }
